deploy: e6f70a6b8eca788f27203d87adae1f66fd262af7

--- a/sdk_documenation/latest/genindex.html
+++ b/sdk_documenation/latest/genindex.html
@@ -449,13 +449,6 @@
 </li>
       </ul></li>
       <li>
-    firebolt.async_db.util
-
-      <ul>
-        <li><a href="firebolt.async_db.html#module-firebolt.async_db.util">module</a>
-</li>
-      </ul></li>
-      <li>
     firebolt.client.auth.client_credentials.ClientCredentials
 
       <ul>
@@ -562,16 +555,22 @@
 <h2 id="I">I</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="firebolt.async_db.html#firebolt.async_db.connection.Connection.id">id (firebolt.async_db.connection.Connection attribute)</a>
+
+      <ul>
+        <li><a href="firebolt.db.html#firebolt.db.connection.Connection.id">(firebolt.db.connection.Connection attribute)</a>
+</li>
+      </ul></li>
       <li><a href="firebolt.service.html#firebolt.service.manager.ResourceManager.instance_types">instance_types (firebolt.service.manager.ResourceManager attribute)</a>
 </li>
       <li><a href="firebolt.common.html#firebolt.utils.exception.InstanceTypeNotFoundError">InstanceTypeNotFoundError</a>
 </li>
       <li><a href="firebolt.common.html#firebolt.utils.exception.IntegrityError">IntegrityError</a>
 </li>
-      <li><a href="firebolt.common.html#firebolt.utils.exception.InterfaceError">InterfaceError</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="firebolt.common.html#firebolt.utils.exception.InterfaceError">InterfaceError</a>
+</li>
       <li><a href="firebolt.common.html#firebolt.utils.exception.InternalError">InternalError</a>
 </li>
       <li><a href="firebolt.async_db.html#firebolt.async_db.connection.Connection.is_async_query_running">is_async_query_running() (firebolt.async_db.connection.Connection method)</a>
@@ -613,8 +612,6 @@
         <li><a href="firebolt.async_db.html#module-firebolt.async_db.connection">firebolt.async_db.connection</a>
 </li>
         <li><a href="firebolt.async_db.html#module-firebolt.async_db.cursor">firebolt.async_db.cursor</a>
-</li>
-        <li><a href="firebolt.async_db.html#module-firebolt.async_db.util">firebolt.async_db.util</a>
 </li>
         <li><a href="firebolt.client.html#module-firebolt.client.auth.client_credentials.ClientCredentials">firebolt.client.auth.client_credentials.ClientCredentials</a>
 </li>
@@ -739,6 +736,20 @@
 <h2 id="U">U</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="firebolt.async_db.html#firebolt.async_db.cursor.Cursor.use_database">use_database() (firebolt.async_db.cursor.Cursor method)</a>
+
+      <ul>
+        <li><a href="firebolt.db.html#firebolt.db.cursor.Cursor.use_database">(firebolt.db.cursor.Cursor method)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="firebolt.async_db.html#firebolt.async_db.cursor.Cursor.use_engine">use_engine() (firebolt.async_db.cursor.Cursor method)</a>
+
+      <ul>
+        <li><a href="firebolt.db.html#firebolt.db.cursor.Cursor.use_engine">(firebolt.db.cursor.Cursor method)</a>
+</li>
+      </ul></li>
       <li><a href="firebolt.common.html#firebolt.common.settings.Settings.user">user (firebolt.common.settings.Settings attribute)</a>
 </li>
   </ul></td>
