deploy: d3af11d43dd3ace47b62e10112dc26cbaad27791

--- a/sdk_documenation/latest/genindex.html
+++ b/sdk_documenation/latest/genindex.html
@@ -136,14 +136,14 @@
 </li>
       <li><a href="firebolt.common.html#firebolt.utils.exception.AccountNotFoundOrNoAccessError">AccountNotFoundOrNoAccessError</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="firebolt.async_db.html#firebolt.async_db.connection.Connection.aclose">aclose() (firebolt.async_db.connection.Connection method)</a>
 
       <ul>
         <li><a href="firebolt.async_db.html#firebolt.async_db.cursor.Cursor.aclose">(firebolt.async_db.cursor.Cursor method)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="firebolt.common.html#firebolt.utils.exception.AlreadyBoundError">AlreadyBoundError</a>
 </li>
       <li><a href="firebolt.async_db.html#firebolt.async_db.connection.Connection.api_endpoint">api_endpoint (firebolt.async_db.connection.Connection attribute)</a>
@@ -170,6 +170,12 @@
 </li>
       <li><a href="firebolt.common.html#firebolt.utils.exception.AuthorizationError">AuthorizationError</a>
 </li>
+      <li><a href="firebolt.async_db.html#firebolt.async_db.connection.Connection.autocommit">autocommit (firebolt.async_db.connection.Connection property)</a>
+
+      <ul>
+        <li><a href="firebolt.db.html#firebolt.db.connection.Connection.autocommit">(firebolt.db.connection.Connection property)</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -246,14 +252,14 @@
         <li><a href="firebolt.db.html#firebolt.db.connection.connect_v1">(in module firebolt.db.connection)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="firebolt.async_db.html#firebolt.async_db.connection.connect_v2">connect_v2() (in module firebolt.async_db.connection)</a>
 
       <ul>
         <li><a href="firebolt.db.html#firebolt.db.connection.connect_v2">(in module firebolt.db.connection)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="firebolt.async_db.html#firebolt.async_db.connection.Connection">Connection (class in firebolt.async_db.connection)</a>
 
       <ul>
@@ -278,6 +284,12 @@
 </li>
       <li><a href="firebolt.common.html#firebolt.utils.exception.ConnectionError">ConnectionError</a>
 </li>
+      <li><a href="firebolt.async_db.html#firebolt.async_db.connection.Connection.create_transaction_params">create_transaction_params() (firebolt.async_db.connection.Connection method)</a>
+
+      <ul>
+        <li><a href="firebolt.db.html#firebolt.db.connection.Connection.create_transaction_params">(firebolt.db.connection.Connection method)</a>
+</li>
+      </ul></li>
       <li><a href="firebolt.async_db.html#firebolt.async_db.cursor.Cursor">Cursor (class in firebolt.async_db.cursor)</a>
 
       <ul>
@@ -561,14 +573,20 @@
         <li><a href="firebolt.db.html#firebolt.db.connection.Connection.id">(firebolt.db.connection.Connection attribute)</a>
 </li>
       </ul></li>
+      <li><a href="firebolt.async_db.html#firebolt.async_db.connection.Connection.in_transaction">in_transaction (firebolt.async_db.connection.Connection property)</a>
+
+      <ul>
+        <li><a href="firebolt.db.html#firebolt.db.connection.Connection.in_transaction">(firebolt.db.connection.Connection property)</a>
+</li>
+      </ul></li>
       <li><a href="firebolt.service.html#firebolt.service.manager.ResourceManager.instance_types">instance_types (firebolt.service.manager.ResourceManager attribute)</a>
 </li>
       <li><a href="firebolt.common.html#firebolt.utils.exception.InstanceTypeNotFoundError">InstanceTypeNotFoundError</a>
 </li>
-      <li><a href="firebolt.common.html#firebolt.utils.exception.IntegrityError">IntegrityError</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="firebolt.common.html#firebolt.utils.exception.IntegrityError">IntegrityError</a>
+</li>
       <li><a href="firebolt.common.html#firebolt.utils.exception.InterfaceError">InterfaceError</a>
 </li>
       <li><a href="firebolt.common.html#firebolt.utils.exception.InternalError">InternalError</a>
@@ -714,10 +732,16 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="firebolt.service.html#firebolt.service.manager.ResourceManager.regions">regions (firebolt.service.manager.ResourceManager attribute)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="firebolt.service.html#firebolt.service.manager.ResourceManager">ResourceManager (class in firebolt.service.manager)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="firebolt.async_db.html#firebolt.async_db.connection.Connection.rollback">rollback() (firebolt.async_db.connection.Connection method)</a>
+
+      <ul>
+        <li><a href="firebolt.db.html#firebolt.db.connection.Connection.rollback">(firebolt.db.connection.Connection method)</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
